web/components/PlayerBioCard/PlayerBioCard.module.scss
@import "styles/vars.scss";
@import "styles/Charts.module.scss";

.playerCard {
  display: grid;
  grid-template-columns: 70% 30%;

  .info {
    display: grid;
    grid-template-columns: 3fr 1fr;
    grid-template-rows: 3fr 2fr;
    padding-top: 12px;
    padding-right: 12px;
    padding-left: 12px;
    padding-bottom: 8px;

    .names {
      display: flex;
      flex-direction: column;
      .firstName {
        font-size: 14px;
        font-weight: 900;
      }
      .lastName {
        color: $primary-color;
        font-size: 24px;
        font-weight: 700;
      }
      margin-bottom: 9px;
    }

    .stats {
      display: grid;
      grid-template-columns: 1fr 1fr;
      font-size: 10px;
      .label {
        opacity: 0.5;
      }
      .value {
      }
    }

    .teamLogo {
      width: 32px;
      height: 32px;
      justify-self: end;
    }

    .teamInfo {
      display: grid;
      font-size: 10px;
      text-align: right;

      .teamAbbreviation {
        opacity: 0.5;
      }
      .position {
        text-transform: uppercase;
        white-space: nowrap;
      }
    }
  }

  // PC view
  @media only screen and (min-width: $screen-large) {
  }

  // remove list default style
  ul {
    list-style-type: none;
    margin-block-start: 0;
    margin-block-end: 0;
    margin-inline-start: 0;
    margin-inline-end: 0;
    padding-block-start: 0;
    padding-block-end: 0;
    padding-inline-start: 0;
    padding-inline-end: 0;
  }

  li {
    display: block;
  }
}

